; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/dbus/extr_dbus_new.c_wpa_dbus_ctrl_iface_props_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/dbus/extr_dbus_new.c_wpa_dbus_ctrl_iface_props_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpas_dbus_priv = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wpas_dbus_priv*)* @wpa_dbus_ctrl_iface_props_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wpa_dbus_ctrl_iface_props_deinit(%struct.wpas_dbus_priv* %0) #0 {
  %2 = alloca %struct.wpas_dbus_priv*, align 8
  %3 = alloca i32, align 4
  store %struct.wpas_dbus_priv* %0, %struct.wpas_dbus_priv** %2, align 8
  %4 = load %struct.wpas_dbus_priv*, %struct.wpas_dbus_priv** %2, align 8
  %5 = getelementptr inbounds %struct.wpas_dbus_priv, %struct.wpas_dbus_priv* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  store i32 %6, i32* %3, align 4
  br label %7

7:                                                ; preds = %17, %1
  %8 = load %struct.wpas_dbus_priv*, %struct.wpas_dbus_priv** %2, align 8
  %9 = getelementptr inbounds %struct.wpas_dbus_priv, %struct.wpas_dbus_priv* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %7
  %18 = load %struct.wpas_dbus_priv*, %struct.wpas_dbus_priv** %2, align 8
  %19 = getelementptr inbounds %struct.wpas_dbus_priv, %struct.wpas_dbus_priv* %18, i32 0, i32 1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  %23 = sext i32 %21 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = inttoptr i64 %26 to i8*
  %28 = call i32 @os_free(i8* %27)
  br label %7

29:                                               ; preds = %7
  %30 = load %struct.wpas_dbus_priv*, %struct.wpas_dbus_priv** %2, align 8
  %31 = getelementptr inbounds %struct.wpas_dbus_priv, %struct.wpas_dbus_priv* %30, i32 0, i32 1
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = bitcast %struct.TYPE_2__* %32 to i8*
  %34 = call i32 @os_free(i8* %33)
  ret void
}

declare dso_local i32 @os_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
